# FYT2024_radar

./: .gitignore  README.md
radar_bringup/: CMakeLists.txt  package.xml
radar_bringup/config/: camera_info.yaml  camera_node_params.yaml  detector_params.yaml  launch_params.yaml  video_node_params.yaml
radar_bringup/launch/: bringup.launch.py
radar_calibrator/: CMakeLists.txt  package.xml
radar_calibrator/include/radar_calibrator/: calibrator_node.hpp  calibrator_widget.hpp  common.hpp  image_widget.hpp  lru_decider.hpp  map_widget.hpp
radar_calibrator/src/: calibrator_node.cpp  calibrator_widget.cpp  image_widget.cpp  lru_decider.cpp  main.cpp  map_widget.cpp
radar_camera_driver/: CMakeLists.txt  README.md  package.xml
radar_camera_driver/config/: camera_info.yaml  camera_params.yaml
radar_camera_driver/hikSDK/include/: CameraParams.h  MvCameraControl.h  MvErrorDefine.h  MvObsoleteInterfaces.h  ObsoleteCamParams.h  PixelType.h
radar_camera_driver/hikSDK/lib/amd64/: CommonParameters.ini  MvFGProducerCML.cti  MvFGProducerCXP.cti  MvFGProducerGEV.cti  MvFGProducerXoF.cti  MvProducerGEV.cti  MvProducerU3V.cti  libMVGigEVisionSDK.so.4.4.0.3  libMvCameraControlWrapper.so.4.4.0.4  libMvUsb3vTL.so.4.4.0.3
radar_camera_driver/include/radar_camera_driver/: daheng_camera.hpp  recorder.hpp
radar_camera_driver/launch/: hik_camera.launch.py
radar_camera_driver/src/: daheng_camera.cpp  hik_camera_node.cpp  recorder.cpp  video_player.cpp
radar_detector/: package.xml  setup.cfg  setup.py
radar_detector/radar_detector/: config.py  detector_node.py
radar_detector/radar_detector/modules/: detector.py
radar_interfaces/: CMakeLists.txt  livox_sdk_vendor-extras.cmake  package.xml
radar_interfaces/msg/: BoundingBox.msg  Detection.msg  DetectionArray.msg  Point.msg  TargetInfo.msg  TargetInfoArray.msg
radar_interfaces/msg/referee/: BulletAllowance.msg  CapacityData.msg  ClientMapReceiveData.msg  ClientMapSendData.msg  DartClientCmd.msg  DartRemainingTime.msg  DartStatus.msg  EngineerUi.msg  EventData.msg  GameRobotHp.msg  GameRobotStatus.msg  GameStatus.msg  IcraBuffDebuffZoneStatus.msg  ManualToReferee.msg  MapSentryData.msg  PowerHeatData.msg  PowerManagementInitializationExceptionData.msg  PowerManagementProcessStackOverflowData.msg  PowerManagementSampleAndStatusData.msg  PowerManagementSystemExceptionData.msg  PowerManagementUnknownExceptionData.msg  RadarCmd.msg  RadarMarkData.msg  RfidStatus.msg  RobotHurt.msg  RobotsPositionData.msg  ShootData.msg  StateCmd.msg  SupplyProjectileAction.msg
radar_interfaces/srv/: PointTransform.srv  SetMode.srv
radar_referee_serial/referee/: CMakeLists.txt  package.xml
radar_referee_serial/referee/include/radar_referee/: referee_base.hpp  referee_comm.hpp  referee_node.hpp
radar_referee_serial/referee/include/radar_referee/common/: data.hpp  protocol.hpp  sender.hpp
radar_referee_serial/referee/launch/: load.launch
radar_referee_serial/referee/src/: main.cpp  referee_comm.cpp  referee_node.cpp  sender.cpp
radar_referee_serial/serial/: CMakeLists.txt
radar_referee_serial/serial/src/impl/list_ports/: list_ports_linux.cc
